~ s/URI/URL/g DRAFT
won't build: can't find any classes