@@ -12,8 +12,8 @@ import org.apache.jena.graph.Node_URI;
 import org.apache.jena.rdf.model.*;
 import org.apache.jena.riot.RiotNotFoundException;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.MalformedURLException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -25,46 +25,46 @@ public class ShapeTreeFactory {
     }
 
     private static final String RDFS_LABEL = "http://www.w3.org/2000/01/rdf-schema#label";
-    private static final Map<URI, ShapeTree> localShapeTreeCache = new HashMap<>();
+    private static final Map<URL, ShapeTree> localShapeTreeCache = new HashMap<>();
 
-    public static ShapeTree getShapeTree(URI shapeTreeURI) throws URISyntaxException, ShapeTreeException {
+    public static ShapeTree getShapeTree(URL shapeTreeURL) throws MalformedURLException, ShapeTreeException {
 
-        if (localShapeTreeCache.containsKey(shapeTreeURI)) {
-            log.debug("[{}] previously cached -- returning", shapeTreeURI.toString());
-            return localShapeTreeCache.get(shapeTreeURI);
+        if (localShapeTreeCache.containsKey(shapeTreeURL)) {
+            log.debug("[{}] previously cached -- returning", shapeTreeURL.toString());
+            return localShapeTreeCache.get(shapeTreeURL);
         }
 
-        dereferenceAndParseShapeTreeResource(shapeTreeURI);
+        dereferenceAndParseShapeTreeResource(shapeTreeURL);
 
-        return localShapeTreeCache.get(shapeTreeURI);
+        return localShapeTreeCache.get(shapeTreeURL);
     }
 
-    private static void dereferenceAndParseShapeTreeResource(URI shapeTreeURI) throws URISyntaxException, ShapeTreeException {
+    private static void dereferenceAndParseShapeTreeResource(URL shapeTreeURL) throws MalformedURLException, ShapeTreeException {
         try {
-            DocumentResponse contents = DocumentLoaderManager.getLoader().loadExternalDocument(shapeTreeURI);
-            Model model = GraphHelper.readStringIntoModel(shapeTreeURI, contents.getBody(), contents.getContentType().orElse("text/turtle"));
-            Resource resource = model.getResource(shapeTreeURI.toString());
+            DocumentResponse contents = DocumentLoaderManager.getLoader().loadExternalDocument(shapeTreeURL);
+            Model model = GraphHelper.readStringIntoModel(shapeTreeURL, contents.getBody(), contents.getContentType().orElse("text/turtle"));
+            Resource resource = model.getResource(shapeTreeURL.toString());
             recursivelyParseShapeTree(model, resource);
         } catch (RiotNotFoundException rnfe) {
-            log.error("Unable to load graph at URI {}", shapeTreeURI);
+            log.error("Unable to load graph at URL {}", shapeTreeURL);
         }
     }
 
-    private static void recursivelyParseShapeTree(Model model, Resource resource) throws URISyntaxException, ShapeTreeException {
-        // Set the URI as the ID (string representation)
-        String shapeTreeURIString = resource.getURI();
-        log.debug("Entering recursivelyParseShapeTree for [{}]", shapeTreeURIString);
-        URI shapeTreeURI = new URI(shapeTreeURIString);
+    private static void recursivelyParseShapeTree(Model model, Resource resource) throws MalformedURLException, ShapeTreeException {
+        // Set the URL as the ID (string representation)
+        String shapeTreeURLString = resource.getURL();
+        log.debug("Entering recursivelyParseShapeTree for [{}]", shapeTreeURLString);
+        URL shapeTreeURL = new URL(shapeTreeURLString);
 
-        if (localShapeTreeCache.containsKey(shapeTreeURI)) {
-            log.debug("[{}] previously cached -- returning", shapeTreeURIString);
+        if (localShapeTreeCache.containsKey(shapeTreeURL)) {
+            log.debug("[{}] previously cached -- returning", shapeTreeURLString);
             return;
         }
         // Set the expected resource type
         String expectsType = getStringValue(model, resource, ShapeTreeVocabulary.EXPECTS_TYPE);
         if (expectsType == null) throw new ShapeTreeException(500, "Shape Tree :expectsType not found");
 
-        // Set Shape URI
+        // Set Shape URL
         final String shape = getStringValue(model, resource, ShapeTreeVocabulary.SHAPE);
         // Set Label
         final String label = getStringValue(model, resource, RDFS_LABEL);
@@ -72,11 +72,11 @@ public class ShapeTreeFactory {
         final String supports = getStringValue(model, resource, ShapeTreeVocabulary.SUPPORTS);
         // Set Reference collection
         final ArrayList<ReferencedShapeTree> references = new ArrayList<>();
-        List<URI> contains = getURLListValue(model, resource, ShapeTreeVocabulary.CONTAINS);
+        List<URL> contains = getURLListValue(model, resource, ShapeTreeVocabulary.CONTAINS);
 
         ShapeTree shapeTree = new ShapeTree(
                 DocumentLoaderManager.getLoader(),
-                shapeTreeURIString,
+                shapeTreeURLString,
                 expectsType,
                 label,
                 shape,
@@ -85,7 +85,7 @@ public class ShapeTreeFactory {
                 contains);
 
         // Add the shapeTree to the cache before any of the recursive processing
-        localShapeTreeCache.put(shapeTreeURI, shapeTree);
+        localShapeTreeCache.put(shapeTreeURL, shapeTree);
 
         Property referencesProperty = model.createProperty(ShapeTreeVocabulary.REFERENCES);
         if (resource.hasProperty(referencesProperty)) {
@@ -93,15 +93,15 @@ public class ShapeTreeFactory {
             for (Statement referenceStatement : referenceStatements) {
 
                 Resource referenceResource = referenceStatement.getObject().asResource();
-                URI referenceShapeTreeUri = new URI(getStringValue(model, referenceResource, ShapeTreeVocabulary.HAS_SHAPE_TREE));
+                URL referenceShapeTreeUrl = new URL(getStringValue(model, referenceResource, ShapeTreeVocabulary.HAS_SHAPE_TREE));
                 String shapePath = getStringValue(model, referenceResource, ShapeTreeVocabulary.VIA_SHAPE_PATH);
-                if (!localShapeTreeCache.containsKey(referenceShapeTreeUri)) {
+                if (!localShapeTreeCache.containsKey(referenceShapeTreeUrl)) {
                     // If the model contains the referenced ShapeTree, go ahead and parse and cache it
-                    recursivelyParseShapeTree(model, model.getResource(referenceShapeTreeUri.toString()));
+                    recursivelyParseShapeTree(model, model.getResource(referenceShapeTreeUrl.toString()));
                 }
 
                 // Create the object that defines there relation between a ShapeTree and its children
-                ReferencedShapeTree referencedShapeTree = new ReferencedShapeTree(referenceShapeTreeUri, shapePath);
+                ReferencedShapeTree referencedShapeTree = new ReferencedShapeTree(referenceShapeTreeUrl, shapePath);
                 references.add(referencedShapeTree);
             }
         }
@@ -111,9 +111,9 @@ public class ShapeTreeFactory {
             throw new ShapeTreeException(400, "Contents predicate not expected outside of st:Container Types");
         }
         if (expectsType.equals(ShapeTreeVocabulary.CONTAINER)) {
-            for (URI uri : contains) {
-                if (!localShapeTreeCache.containsKey(uri)) {
-                    recursivelyParseShapeTree(model, model.getResource(uri.toString()));
+            for (URL url : contains) {
+                if (!localShapeTreeCache.containsKey(url)) {
+                    recursivelyParseShapeTree(model, model.getResource(url.toString()));
                 }
             }
         }
@@ -125,8 +125,8 @@ public class ShapeTreeFactory {
             Statement statement = resource.getProperty(property);
             if (statement.getObject().isLiteral()) {
                 return statement.getObject().asLiteral().getString();
-            } else if (statement.getObject().isURIResource()) {
-                return statement.getObject().asResource().getURI();
+            } else if (statement.getObject().isURLResource()) {
+                return statement.getObject().asResource().getURL();
             } else {
                 log.error("In getStringValue for predicate [{}] unable to value of Node", predicate);
             }
@@ -135,19 +135,19 @@ public class ShapeTreeFactory {
         return null;
     }
 
-    private static List<URI> getURLListValue(Model model, Resource resource, String predicate) throws URISyntaxException {
-        List<URI> uris = new ArrayList<>();
+    private static List<URL> getURLListValue(Model model, Resource resource, String predicate) throws MalformedURLException {
+        List<URL> urls = new ArrayList<>();
         Property property = model.createProperty(predicate);
         if (resource.hasProperty(property)) {
             List<Statement> propertyStatements = resource.listProperties(property).toList();
             for (Statement propertyStatement : propertyStatements) {
                 Node propertyNode = propertyStatement.getObject().asNode();
                 if (propertyNode instanceof Node_URI) {
-                    URI contentURI = new URI(propertyNode.getURI());
-                    uris.add(contentURI);
+                    URL contentURL = new URL(propertyNode.getURL());
+                    urls.add(contentURL);
                 }
             }
         }
-        return uris;
+        return urls;
     }
 }
