@@ -29,8 +29,8 @@ import org.jetbrains.annotations.NotNull;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.Serializable;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.MalformedURLException;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 
@@ -46,7 +46,7 @@ public class ShapeTree {
     final private String label;
     final private String supports;
     @NotNull
-    final private List<URI> contains;
+    final private List<URL> contains;
     @NotNull
     final private List<ReferencedShapeTree> references;
 
@@ -57,7 +57,7 @@ public class ShapeTree {
                      String shape,
                      String supports,
                      @NotNull List<ReferencedShapeTree> references,
-                     @NotNull List<URI> contains) {
+                     @NotNull List<URL> contains) {
         this.externalDocumentLoader = externalDocumentLoader;
         this.id = id;
         this.expectedResourceType = expectedResourceType;
@@ -68,27 +68,27 @@ public class ShapeTree {
         this.contains = contains;
     }
 
-    public URI getURI() throws URISyntaxException {
-        return new URI(this.id);
+    public URL getURL() throws MalformedURLException {
+        return new URL(this.id);
     }
 
-    public ValidationResult validateResource(ShapeTreeResource.Primary targetResource) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateResource(ShapeTreeResource.Primary targetResource) throws ShapeTreeException, MalformedURLException {
         return validateResource(targetResource, null);
     }
 
-    public ValidationResult validateResource(ShapeTreeResource.Primary targetResource, URI focusNodeURI) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateResource(ShapeTreeResource.Primary targetResource, URL focusNodeURL) throws ShapeTreeException, MalformedURLException {
         Graph bodyGraph = null;
 
         if (targetResource.getResourceType() != ShapeTreeResourceType.NON_RDF) {
-            bodyGraph = GraphHelper.readStringIntoGraph(targetResource.getUri(),
+            bodyGraph = GraphHelper.readStringIntoGraph(targetResource.getUrl(),
                     targetResource.getBody(),
                     targetResource.getAttributes().firstValue(HttpHeaders.CONTENT_TYPE.getValue()).orElse(null));
         }
         
-        return validateResource(targetResource.getName(), targetResource.getResourceType(), bodyGraph, focusNodeURI);
+        return validateResource(targetResource.getName(), targetResource.getResourceType(), bodyGraph, focusNodeURL);
     }
 
-    public ValidationResult validateResource(String requestedName, ShapeTreeResourceType resourceType, Graph bodyGraph, URI focusNodeURI) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateResource(String requestedName, ShapeTreeResourceType resourceType, Graph bodyGraph, URL focusNodeURL) throws ShapeTreeException, MalformedURLException {
 
         // Check whether the proposed resource is the same type as what is expected by the shape tree
         if (!this.expectedResourceType.equals(resourceType.getValue())) {
@@ -102,7 +102,7 @@ public class ShapeTree {
 
         // If the shape tree specifies a shape to validate, perform shape validation
         if (this.shape != null) {
-            return this.validateGraph(bodyGraph, focusNodeURI);
+            return this.validateGraph(bodyGraph, focusNodeURL);
         }
 
         // Allow if we fall through to here. Focus node is set to null because we only get here if no shape validation was performed
@@ -110,28 +110,28 @@ public class ShapeTree {
 
     }
 
-    public ValidationResult validateGraph(Graph graph, URI focusNodeURI) throws ShapeTreeException, URISyntaxException {
-        // if (true) return new ValidationResult(true, this, this, focusNodeURI); // [debug] ShExC parser brings debugger to its knees
+    public ValidationResult validateGraph(Graph graph, URL focusNodeURL) throws ShapeTreeException, MalformedURLException {
+        // if (true) return new ValidationResult(true, this, this, focusNodeURL); // [debug] ShExC parser brings debugger to its knees
         if (this.shape == null) {
             throw new ShapeTreeException(400, "Attempting to validate a shape for ShapeTree " + this.id + "but it doesn't specify one");
         }
 
-        URI resolvedShapeURI = URI.create(this.id).resolve(this.shape);
+        URL resolvedShapeURL = URL.create(this.id).resolve(this.shape);
 
-        URI shapeResourceURI = resolvedShapeURI;
-        if (shapeResourceURI.getFragment() != null) {
-            shapeResourceURI = new URI(shapeResourceURI.getScheme(), shapeResourceURI.getSchemeSpecificPart(), null);
+        URL shapeResourceURL = resolvedShapeURL;
+        if (shapeResourceURL.getFragment() != null) {
+            shapeResourceURL = new URL(shapeResourceURL.getScheme(), shapeResourceURL.getSchemeSpecificPart(), null);
         }
 
         ShexSchema schema;
-        if (SchemaCache.isInitialized() && SchemaCache.containsSchema(shapeResourceURI)) {
-            log.debug("Found cached schema {}", shapeResourceURI);
-            schema = SchemaCache.getSchema(shapeResourceURI);
+        if (SchemaCache.isInitialized() && SchemaCache.containsSchema(shapeResourceURL)) {
+            log.debug("Found cached schema {}", shapeResourceURL);
+            schema = SchemaCache.getSchema(shapeResourceURL);
         } else {
-            log.debug("Did not find schema in cache {} will retrieve and parse", shapeResourceURI);
-            DocumentResponse shexShapeContents = this.externalDocumentLoader.loadExternalDocument(shapeResourceURI);
+            log.debug("Did not find schema in cache {} will retrieve and parse", shapeResourceURL);
+            DocumentResponse shexShapeContents = this.externalDocumentLoader.loadExternalDocument(shapeResourceURL);
             if (shexShapeContents == null || shexShapeContents.getBody() == null || shexShapeContents.getBody().isEmpty()) {
-                throw new ShapeTreeException(400, "Attempting to validate a ShapeTree (" + this.id + ") - Shape at (" + resolvedShapeURI + ") is not found or is empty");
+                throw new ShapeTreeException(400, "Attempting to validate a ShapeTree (" + this.id + ") - Shape at (" + resolvedShapeURL + ") is not found or is empty");
             }
 
             String shapeBody = shexShapeContents.getBody();
@@ -140,7 +140,7 @@ public class ShapeTree {
             try {
                 schema = new ShexSchema(GlobalFactory.RDFFactory,shexCParser.getRules(stream),shexCParser.getStart());
                 if (SchemaCache.isInitialized()) {
-                    SchemaCache.putSchema(shapeResourceURI, schema);
+                    SchemaCache.putSchema(shapeResourceURL, schema);
                 }
             } catch (Exception ex) {
                 throw new ShapeTreeException(500, "Error parsing ShEx schema - " + ex.getMessage());
@@ -154,14 +154,14 @@ public class ShapeTree {
         ValidationAlgorithm validation = new RecursiveValidation(schema, jenaRDF.asGraph(graph));
         Label shapeLabel = new Label(GlobalFactory.RDFFactory.createIRI(this.shape));
 
-        if (focusNodeURI != null) {
+        if (focusNodeURL != null) {
 
-            IRI focusNode = GlobalFactory.RDFFactory.createIRI(focusNodeURI.toString());
+            IRI focusNode = GlobalFactory.RDFFactory.createIRI(focusNodeURL.toString());
             log.debug("Validating Shape Label = {}, Focus Node = {}", shapeLabel.toPrettyString(), focusNode.getIRIString());
             validation.validate(focusNode, shapeLabel);
             boolean valid = validation.getTyping().isConformant(focusNode, shapeLabel);
             if (valid) {
-                return new ValidationResult(valid, this, this, focusNodeURI);
+                return new ValidationResult(valid, this, this, focusNodeURL);
             } else {
                 return new ValidationResult(valid, this, "Failed to validate: " + shapeLabel.toPrettyString());
             }
@@ -173,11 +173,11 @@ public class ShapeTree {
 
             for (Node evaluateNode : evaluateNodes) {
 
-                IRI node = GlobalFactory.RDFFactory.createIRI(evaluateNode.getURI());
+                IRI node = GlobalFactory.RDFFactory.createIRI(evaluateNode.getURL());
                 validation.validate(node, shapeLabel);
                 boolean valid = validation.getTyping().isConformant(node, shapeLabel);
 
-                if (valid) { return new ValidationResult(valid, this, this, URI.create(evaluateNode.getURI())); }
+                if (valid) { return new ValidationResult(valid, this, this, URL.create(evaluateNode.getURL())); }
 
             }
 
@@ -186,7 +186,7 @@ public class ShapeTree {
         }
     }
 
-    public ValidationResult validateContainedResource(ShapeTreeResource.Primary containedResource) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateContainedResource(ShapeTreeResource.Primary containedResource) throws ShapeTreeException, MalformedURLException {
 
         if (this.contains == null || this.contains.isEmpty()) {
             // The contained resource is permitted because this shape tree has no restrictions on what it contains
@@ -197,33 +197,33 @@ public class ShapeTree {
 
     }
 
-    public ValidationResult validateContainedResource(ShapeTreeResource.Primary containedResource, URI targetShapeTreeURI, URI focusNodeURI) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateContainedResource(ShapeTreeResource.Primary containedResource, URL targetShapeTreeURL, URL focusNodeURL) throws ShapeTreeException, MalformedURLException {
 
         Graph containedResourceGraph = null;
 // !! containedResource.getGraph().get();
         if (containedResource.getResourceType() != ShapeTreeResourceType.NON_RDF) {
-            containedResourceGraph = GraphHelper.readStringIntoGraph(containedResource.getUri(),
+            containedResourceGraph = GraphHelper.readStringIntoGraph(containedResource.getUrl(),
                     containedResource.getBody(),
                     containedResource.getAttributes().firstValue(HttpHeaders.CONTENT_TYPE.getValue()).orElse(null));
         }
 
-        return validateContainedResource(containedResource.getName(), containedResource.getResourceType(), targetShapeTreeURI, containedResourceGraph, focusNodeURI);
+        return validateContainedResource(containedResource.getName(), containedResource.getResourceType(), targetShapeTreeURL, containedResourceGraph, focusNodeURL);
 
     }
 
-    public ValidationResult validateContainedResource(String requestedName, ShapeTreeResourceType resourceType, URI targetShapeTreeURI, Graph bodyGraph, URI focusNodeURI) throws ShapeTreeException, URISyntaxException {
+    public ValidationResult validateContainedResource(String requestedName, ShapeTreeResourceType resourceType, URL targetShapeTreeURL, Graph bodyGraph, URL focusNodeURL) throws ShapeTreeException, MalformedURLException {
 
         if (this.contains == null || this.contains.isEmpty()) {
             // The contained resource is permitted because this shape tree has no restrictions on what it contains
             return new ValidationResult(true, this, this, null);
         }
 
-        if (targetShapeTreeURI != null) {
+        if (targetShapeTreeURL != null) {
             // And if it exists in st:contains
-            if (this.contains.contains(targetShapeTreeURI)) {
-                ShapeTree targetShapeTree = ShapeTreeFactory.getShapeTree(targetShapeTreeURI);
+            if (this.contains.contains(targetShapeTreeURL)) {
+                ShapeTree targetShapeTree = ShapeTreeFactory.getShapeTree(targetShapeTreeURL);
                 // Evaluate the shape tree against the attributes of the proposed resources
-                ValidationResult result = targetShapeTree.validateResource(requestedName, resourceType, bodyGraph, focusNodeURI);
+                ValidationResult result = targetShapeTree.validateResource(requestedName, resourceType, bodyGraph, focusNodeURL);
                 // Continue if the proposed attributes were not a match
                 if (Boolean.FALSE.equals(result.getValid())) {
                     return new ValidationResult(false, null, "Failed to validate " + targetShapeTree.getId());
@@ -233,18 +233,18 @@ public class ShapeTree {
             } else {
                 // We have a misunderstanding if a target shape tree is supplied but doesn't exist in st:contains
                 return new ValidationResult(false, this, "Target shape tree " +
-                        targetShapeTreeURI + "was provided but not found in st:contains");
+                        targetShapeTreeURL + "was provided but not found in st:contains");
             }
 
         } else {
             // For each shape tree in st:contains
-            for (URI containsShapeTreeURI : getPrioritizedContains()) {
+            for (URL containsShapeTreeURL : getPrioritizedContains()) {
 
-                ShapeTree containsShapeTree = ShapeTreeFactory.getShapeTree(containsShapeTreeURI);
+                ShapeTree containsShapeTree = ShapeTreeFactory.getShapeTree(containsShapeTreeURL);
                 if (containsShapeTree == null) { continue; } // Continue if the shape tree isn't gettable
 
                 // Evaluate the shape tree against the attributes of the proposed resources
-                ValidationResult result = containsShapeTree.validateResource(requestedName, resourceType, bodyGraph, focusNodeURI);
+                ValidationResult result = containsShapeTree.validateResource(requestedName, resourceType, bodyGraph, focusNodeURL);
                 // Continue if the proposed attributes were not a match
                 if (Boolean.FALSE.equals(result.getValid())) { continue; }
                 // Return the successful validation result
@@ -256,24 +256,24 @@ public class ShapeTree {
 
     }
 
-    public Iterator<ReferencedShapeTree> getReferencedShapeTrees() throws URISyntaxException, ShapeTreeException {
+    public Iterator<ReferencedShapeTree> getReferencedShapeTrees() throws MalformedURLException, ShapeTreeException {
         return getReferencedShapeTrees(RecursionMethods.DEPTH_FIRST);
     }
 
-    public Iterator<ReferencedShapeTree> getReferencedShapeTrees(RecursionMethods recursionMethods) throws URISyntaxException, ShapeTreeException {
+    public Iterator<ReferencedShapeTree> getReferencedShapeTrees(RecursionMethods recursionMethods) throws MalformedURLException, ShapeTreeException {
         return getReferencedShapeTreesList(recursionMethods).iterator();
     }
 
     // Return the list of shape tree contains by priority from most to least strict
-    public List<URI> getPrioritizedContains() {
+    public List<URL> getPrioritizedContains() {
 
-        List<URI> prioritized = new ArrayList<>(this.contains);
+        List<URL> prioritized = new ArrayList<>(this.contains);
         Collections.sort(prioritized, new SortByShapeTreeContainsPriority());
         return prioritized;
 
     }
 
-    private List<ReferencedShapeTree> getReferencedShapeTreesList(RecursionMethods recursionMethods) throws URISyntaxException, ShapeTreeException {
+    private List<ReferencedShapeTree> getReferencedShapeTreesList(RecursionMethods recursionMethods) throws MalformedURLException, ShapeTreeException {
         if (recursionMethods.equals(RecursionMethods.BREADTH_FIRST)) {
             return getReferencedShapeTreesListBreadthFirst();
         } else {
@@ -282,14 +282,14 @@ public class ShapeTree {
         }
     }
 
-    private List<ReferencedShapeTree> getReferencedShapeTreesListBreadthFirst() throws URISyntaxException, ShapeTreeException {
+    private List<ReferencedShapeTree> getReferencedShapeTreesListBreadthFirst() throws MalformedURLException, ShapeTreeException {
         List<ReferencedShapeTree> referencedShapeTrees = new ArrayList<>();
         Queue<ReferencedShapeTree> queue = new LinkedList<>(this.getReferences());
 
         while (!queue.isEmpty()) {
             ReferencedShapeTree currentShapeTree = queue.poll();
             referencedShapeTrees.add(currentShapeTree);
-            ShapeTree shapeTree = ShapeTreeFactory.getShapeTree(currentShapeTree.getReferencedShapeTreeURI());
+            ShapeTree shapeTree = ShapeTreeFactory.getShapeTree(currentShapeTree.getReferencedShapeTreeURL());
             if (shapeTree != null) {
                 List<ReferencedShapeTree> currentReferencedShapeTrees = shapeTree.getReferences();
                 if (currentReferencedShapeTrees != null) {
@@ -300,10 +300,10 @@ public class ShapeTree {
         return referencedShapeTrees;
     }
 
-    private List<ReferencedShapeTree> getReferencedShapeTreesListDepthFirst(List<ReferencedShapeTree> currentReferencedShapeTrees, List<ReferencedShapeTree> referencedShapeTrees) throws URISyntaxException, ShapeTreeException {
+    private List<ReferencedShapeTree> getReferencedShapeTreesListDepthFirst(List<ReferencedShapeTree> currentReferencedShapeTrees, List<ReferencedShapeTree> referencedShapeTrees) throws MalformedURLException, ShapeTreeException {
         for (ReferencedShapeTree currentShapeTreeReference : currentReferencedShapeTrees) {
             referencedShapeTrees.add(currentShapeTreeReference);
-            ShapeTree currentReferencedShapeTree = ShapeTreeFactory.getShapeTree(currentShapeTreeReference.getReferencedShapeTreeURI());
+            ShapeTree currentReferencedShapeTree = ShapeTreeFactory.getShapeTree(currentShapeTreeReference.getReferencedShapeTreeURL());
             if (currentReferencedShapeTree != null) {
                 referencedShapeTrees = getReferencedShapeTreesListDepthFirst(currentReferencedShapeTree.getReferences(), referencedShapeTrees);
             }
@@ -316,12 +316,12 @@ public class ShapeTree {
     }
 }
 
-class SortByShapeTreeContainsPriority implements Comparator<URI>, Serializable
+class SortByShapeTreeContainsPriority implements Comparator<URL>, Serializable
 {
     // Used for sorting shape trees in st:contains by most to least strict
     @SneakyThrows
     @Override
-    public int compare(URI stUri1, URI stUri2) {
+    public int compare(URL stUri1, URL stUri2) {
 
         ShapeTree st1 = ShapeTreeFactory.getShapeTree(stUri1);
         ShapeTree st2 = ShapeTreeFactory.getShapeTree(stUri2);
