@@ -16,8 +16,8 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.MalformedURLException;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,8 +33,8 @@ class ShapeTreeParsingTests {
         DocumentLoaderManager.setLoader(httpExternalDocumentLoader);
     }
 
-    protected URI getURI(MockWebServer server, String path) throws URISyntaxException {
-        return new URI(server.url(path).toString());
+    protected URL getURL(MockWebServer server, String path) throws URLSyntaxException {
+        return new URL(server.url(path).toString());
     }
 
     @BeforeAll
@@ -54,9 +54,9 @@ class ShapeTreeParsingTests {
     void parseShapeTreeReuse() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree1);
-        ShapeTree projectShapeTree2 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree2 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree1);
         assertEquals(projectShapeTree1.hashCode(), projectShapeTree2.hashCode());
     }
@@ -68,7 +68,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-invalid#DataRepositoryTree"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-invalid#DataRepositoryTree"))
         );
     }
 
@@ -79,7 +79,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-missing#missing"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-missing#missing"))
         );
     }
 
@@ -90,15 +90,15 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         // Retrieve the MilestoneTree shapetree (which is referred to by the ProjectTree shapetree)
-        ShapeTree milestoneShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
+        ShapeTree milestoneShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
         Assertions.assertNotNull(milestoneShapeTree1);
 
         // Retrieve the ProjectTree shapetree which will recursively cache the MilestoneTree shapetree
-        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree1);
 
         // Retrieve the MilestoneTree shapetree again, ensuring the same instance is used
-        ShapeTree milestoneShapeTree2 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
+        ShapeTree milestoneShapeTree2 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
         Assertions.assertNotNull(milestoneShapeTree2);
 
         assertEquals(milestoneShapeTree1.hashCode(), milestoneShapeTree2.hashCode());
@@ -111,7 +111,7 @@ class ShapeTreeParsingTests {
     void parseShapeTreeReferences() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree);
         assertFalse(projectShapeTree.getReferences().isEmpty());
     }
@@ -122,9 +122,9 @@ class ShapeTreeParsingTests {
     void parseShapeTreeContains() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree);
-        assertTrue(projectShapeTree.getContains().contains(getURI(server,"/static/shapetrees/project/shapetree#MilestoneTree")));
+        assertTrue(projectShapeTree.getContains().contains(getURL(server,"/static/shapetrees/project/shapetree#MilestoneTree")));
     }
 
     @SneakyThrows
@@ -134,7 +134,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-            ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project-record/shapetree-invalid#DataRepositoryTree"))
+            ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project-record/shapetree-invalid#DataRepositoryTree"))
         );
     }
 
@@ -144,7 +144,7 @@ class ShapeTreeParsingTests {
     void testTraverseReferences() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         projectShapeTree.getReferencedShapeTrees();
         Assertions.assertTrue(projectShapeTree.getReferencedShapeTrees(RecursionMethods.BREADTH_FIRST).hasNext());
         Assertions.assertTrue(projectShapeTree.getReferencedShapeTrees(RecursionMethods.DEPTH_FIRST).hasNext());
